# dataprof

./: README.md  config.yaml  data_quality_checks.py  pyproject.toml
.github/workflows/: ci.yml
dq_check/: core.py  loader.py  main.py
src/: __init__.py
src/dataprof/: ap.csv  core.py  loader.py  main.py
tests/: test_core.py
