[project]
name = "polars-dq-monitor"
version = "0.1.0"
description = "Fast data profiling CLI for tabular data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "hatch>=1.14.2",
    "ipykernel>=6.30.0",
    "pandas>=2.3.1",
    "polars>=1.30.0",
    "pyarrow>=21.0.0",
    "rich>=14.0.0",
    "typer>=0.16.0",
]


[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/dataprof"]

[tool.hatch.build.targets.sdist]
include = ["/src", "/tests"]

[project.scripts]
dataprof = "dataprof.main:main"

