[project]
name = "dataprof"
version = "0.1.0"
description = "Fast data profiling CLI for tabular data"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "click>=8.2.1",
    "ipykernel>=6.30.0",
    "pandas>=2.3.1",
    "polars>=1.30.0",
    "pyarrow>=21.0.0",
    "rich>=14.0.0",
    "typer>=0.16.0",
]


[build-system]
requires = ["uv_build>=0.10.6,<0.11.0"]
build-backend = "uv_build"

[tool.uv.build-backend]
module-name = "dataprof"
module-root = "src"

[dependency-groups]
dev = [
    "ruff>=0.15.2",
]

[project.scripts]
dataprof = "dataprof.main:main"

